[project]
name = "xt"
version = "0.1.0"
description = "xtracker downloader"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.4",
    "fastmcp>=2.14.0",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
]
